--- a/index.html
+++ b/index.html
@@ -5,29 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--шапка сайта-->
     <header class="header-line">
       <div class="container main-header">
-      <nav class="menu">
-        <a href="/" class="header-logo link"> <span class="logo" lang="en">Web</span>Studio</a>
-        <ul class="site-nav">
-          <li class="list"><a href="" class="link link-color item current">Студія</a></li>
-          <li class="list"><a href="./portfolio.html" target="_self" class="link link-color item">Портфоліо</a></li>
-          <li class="list"><a href="" class="link link-color item">Контакти</a></li>
+        <nav class="menu">
+          <a href="/" class="header-logo link">
+            <span class="logo" lang="en">Web</span>Studio</a
+          >
+          <ul class="site-nav">
+            <li class="list">
+              <a href="" class="link link-color item current">Студія</a>
+            </li>
+            <li class="list">
+              <a
+                href="./portfolio.html"
+                target="_self"
+                class="link link-color item"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="list">
+              <a href="" class="link link-color item">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="contact-nav">
+          <li class="list">
+            <a
+              class="link mail text-color item"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="list">
+            <a class="link text-color item" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <ul class="contact-nav">
-        <li class="list"><a class="link mail text-color item" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="list"><a class="link text-color item" href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
-    </div>
+      </div>
     </header>
 
     <main>
@@ -38,38 +67,68 @@
       </section>
 
       <!--особливості-->
-      <section  class="container feature">
+      <section class="container feature">
         <h2 hidden class="visually-hidden">Особливості</h2>
         <div class="">
-        <ul class="feature-list">
-          <li class="list">
-            <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="view text-color">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-          </li>
-          <li class="list">
-            <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="view text-color">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-          </li>
-          <li class="list">
-            <h3 class="feature-title">ПЛАНУВАННЯ</h3>
-            <p class="view text-color">Так само консультація з широким активом значною мірою зумовлює.</p>
-          </li>
-          <li class="list">
-            <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="view text-color">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-          </li>
-        </ul>
-      </div>
+          <ul class="feature-list">
+            <li class="list">
+              <h3 class="feature-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="view text-color">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="list">
+              <h3 class="feature-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="view text-color">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="list">
+              <h3 class="feature-title">ПЛАНУВАННЯ</h3>
+              <p class="view text-color">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="list">
+              <h3 class="feature-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="view text-color">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--чим ми займаємося-->
-      <section  class="container">
+      <section class="container">
         <h2 class="title-desc">Чим ми займаємося</h2>
         <ul class="desc">
-          <li class="list"><img src="./images/img1.jpg" alt="десктопні додатки" width="370" height="294" /></li>
-          <li class="list"><img src="./images/img2.jpg" alt="мобільні додатки" width="370" height="294" /></li>
           <li class="list">
-            <img src="./images/img3.jpg" alt="дизайнерські рішення" width="370" height="294" />
+            <img
+              src="./images/img1.jpg"
+              alt="десктопні додатки"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li class="list">
+            <img
+              src="./images/img2.jpg"
+              alt="мобільні додатки"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li class="list">
+            <img
+              src="./images/img3.jpg"
+              alt="дизайнерські рішення"
+              width="370"
+              height="294"
+            />
           </li>
         </ul>
       </section>
@@ -77,45 +136,83 @@
       <!--наша команда-->
       <section class="team-head">
         <div class="container team">
-        <h2 class="title-desc">Наша команда</h2>
-        <ul class="proper-team">
-          <li class="list">
-            <img class="team-foto" src="./images/team/designer.jpg" alt="designer" width="270" height="260" />
-            <h3 class="team-person">Ігор Дем'яненко</h3>
-            <p class="text-color proff" lang="en">Product Designer</p>
-          </li>
-          <li class="list">
-            <img class="team-foto" src="./images/team/developer.jpg" alt="developer" width="270" height="260" />
-            <h3 class="team-person">Ольга Рєпіна</h3>
-            <p class="text-color proff" lang="en">Frontend Developer</p>
-          </li>
-          <li class="list">
-            <img class="team-foto" src="./images/team/marketing.jpg" alt="marketing" width="270" height="260" />
-            <h3 class="team-person">Микола Тарасов</h3>
-            <p class="text-color proff" lang="en">Marketing</p>
-          </li>
-          <li class="list">
-            <img class="team-foto" src="./images/team/ui.jpg" alt="uidesigner" width="270" height="260"/>
-            <h3 class="team-person">Михайло Єрмаков</h3>
-            <p class="text-color proff" lang="en">UI Designer</p>
-          </li>
-        </ul>
-      </div>
+          <h2 class="title-desc">Наша команда</h2>
+          <ul class="proper-team">
+            <li class="list">
+              <img
+                class="team-foto"
+                src="./images/team/designer.jpg"
+                alt="designer"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-person">Ігор Дем'яненко</h3>
+              <p class="text-color proff" lang="en">Product Designer</p>
+            </li>
+            <li class="list">
+              <img
+                class="team-foto"
+                src="./images/team/developer.jpg"
+                alt="developer"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-person">Ольга Рєпіна</h3>
+              <p class="text-color proff" lang="en">Frontend Developer</p>
+            </li>
+            <li class="list">
+              <img
+                class="team-foto"
+                src="./images/team/marketing.jpg"
+                alt="marketing"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-person">Микола Тарасов</h3>
+              <p class="text-color proff" lang="en">Marketing</p>
+            </li>
+            <li class="list">
+              <img
+                class="team-foto"
+                src="./images/team/ui.jpg"
+                alt="uidesigner"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-person">Михайло Єрмаков</h3>
+              <p class="text-color proff" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!--підвал-->
     <footer class="footer-style">
       <div class="container footer-design">
-      <a href="/" class="footer link"> <span class="logo" lang="en">Web</span>Studio</a>
-      <address>
-        <ul class="address-design">
-          <li class="list"><a href="" class="link address">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li class="list"><a href="mailto:info@devstudio.com" class="link address">info@devstudio.com</a></li>
-          <li class="list"><a href="tel:+380961111111" class="link address">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </div>
+        <a href="/" class="footer link">
+          <span class="logo" lang="en">Web</span>Studio</a
+        >
+        <address>
+          <ul class="address-design">
+            <li class="list">
+              <a href="" class="link address"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li class="list">
+              <a href="mailto:info@devstudio.com" class="link address"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="list">
+              <a href="tel:+380961111111" class="link address"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
