--- a/portfolio.html
+++ b/portfolio.html
@@ -78,9 +78,10 @@
           </li>
         </ul>
       </section>
+
       <section class="container">
-        <div class="flex-card">
-          <div class="element-card">
+        <ul class="flex-card">
+          <li class="element-card list">
             <a href="" class="link">
               <img
                 src="./images/works/one.jpg"
@@ -94,8 +95,8 @@
               </div>
               <p></p>
             </a>
-          </div>
-          <div class="element-card">
+          </li>
+          <li class="element-card list">
             <a href="" class="link">
               <img
                 src="./images/works/two.jpg"
@@ -109,8 +110,8 @@
               </div>
               <p></p>
             </a>
-          </div>
-          <div class="element-card">
+          </li>
+          <li class="element-card list">
             <a href="" class="link">
               <img
                 src="./images/works/three.jpg"
@@ -124,8 +125,8 @@
               </div>
               <p></p>
             </a>
-          </div>
-          <div class="element-card">
+          </li>
+          <li class="element-card list">
             <a href="" class="link">
               <img
                 src="./images/works/four.jpg"
@@ -139,8 +140,8 @@
               </div>
               <p></p>
             </a>
-          </div>
-          <div class="element-card">
+          </li>
+          <li class="element-card list">
             <a href="" class="link">
               <img
                 src="./images/works/five.jpg"
@@ -154,8 +155,8 @@
               </div>
               <p></p>
             </a>
-          </div>
-          <div class="element-card">
+          </li>
+          <li class="element-card list">
             <a href="" class="link">
               <img
                 src="./images/works/six.jpg"
@@ -169,8 +170,8 @@
               </div>
               <p></p>
             </a>
-          </div>
-          <div class="element-card">
+          </li>
+          <li class="element-card list">
             <a href="" class="link">
               <img
                 src="./images/works/seven.jpg"
@@ -184,8 +185,8 @@
               </div>
               <p></p>
             </a>
-          </div>
-          <div class="element-card">
+          </li>
+          <li class="element-card list">
             <a href="" class="link">
               <img
                 src="./images/works/eight.jpg"
@@ -199,8 +200,8 @@
               </div>
               <p></p>
             </a>
-          </div>
-          <div class="element-card">
+          </li>
+          <li class="element-card list">
             <a href="" class="link">
               <img
                 src="./images/works/nine.jpg"
@@ -214,8 +215,8 @@
               </div>
               <p></p>
             </a>
-          </div>
-        </div>
+          </li>
+        </ul>
       </section>
     </main>
 
