--- a/index.html
+++ b/index.html
@@ -196,17 +196,17 @@
         <address>
           <ul class="address-design">
             <li class="list">
-              <a href="" class="link address"
+              <a href="" class="link address contact"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
             <li class="list">
-              <a href="mailto:info@devstudio.com" class="link address"
+              <a href="mailto:info@devstudio.com" class="link address meil-tel"
                 >info@devstudio.com</a
               >
             </li>
             <li class="list">
-              <a href="tel:+380961111111" class="link address"
+              <a href="tel:+380961111111" class="link address meil-tel"
                 >+38 096 111 11 11</a
               >
             </li>
