--- a/portfolio.html
+++ b/portfolio.html
@@ -19,20 +19,23 @@
   </head>
   <body>
     <!--шапка сайта-->
-    <header class="header-line">
-      <div class="container main-header">
+    <header class="header">
+      <div class="container">
         <nav class="menu">
           <a href="/" class="header-logo link">
             <span class="logo" lang="en">Web</span>Studio</a
           >
           <ul class="site-nav">
             <li class="list">
-              <a href="index.html" target="_self" class="link link-color item"
-                >Студія</a
-              >
+              <a href="" class="link link-color item current">Студія</a>
             </li>
             <li class="list">
-              <a href="" class="link link-color item current">Портфоліо</a>
+              <a
+                href="./portfolio.html"
+                target="_self"
+                class="link link-color item"
+                >Портфоліо</a
+              >
             </li>
             <li class="list">
               <a href="" class="link link-color item">Контакти</a>
@@ -58,7 +61,8 @@
 
     <main>
       <!--Герой-->
-      <section class="container">
+      <section class="portfolio">
+        <div class="container">
         <h1 hidden class="visually-hidden">Портфоліо</h1>
         <ul class="filter">
           <li class="list">
@@ -77,9 +81,7 @@
             <button class="filter-button" type="button">Маркетинг</button>
           </li>
         </ul>
-      </section>
-
-      <section class="container">
+      
         <ul class="flex-card">
           <li class="element-card list">
             <a href="" class="link">
@@ -89,7 +91,7 @@
                 width="370"
                 height="294"
               />
-              <div>
+              <div class="info">
                 <h2 class="title-project">Технокряк</h2>
                 <p class="kind-project">Веб-сайт</p>
               </div>
@@ -104,7 +106,7 @@
                 width="370"
                 height="294"
               />
-              <div>
+              <div class="info">
                 <h2 class="title-project">Постер New Orlean vs Golden Star</h2>
                 <p class="kind-project">Дизайн</p>
               </div>
@@ -119,7 +121,7 @@
                 width="370"
                 height="294"
               />
-              <div>
+              <div class="info">
                 <h2 class="title-project">Ресторан Seafood</h2>
                 <p class="kind-project">Додаток</p>
               </div>
@@ -134,7 +136,7 @@
                 width="370"
                 height="294"
               />
-              <div>
+              <div class="info">
                 <h2 class="title-project">Проєкт Prime</h2>
                 <p class="kind-project">Маркетинг</p>
               </div>
@@ -149,7 +151,7 @@
                 width="370"
                 height="294"
               />
-              <div>
+              <div class="info">
                 <h2 class="title-project">Проєкт Boxes</h2>
                 <p class="kind-project">Додаток</p>
               </div>
@@ -164,7 +166,7 @@
                 width="370"
                 height="294"
               />
-              <div>
+              <div class="info">
                 <h2 class="title-project">Inspiration has no Borders</h2>
                 <p class="kind-project">Веб-сайт</p>
               </div>
@@ -179,7 +181,7 @@
                 width="370"
                 height="294"
               />
-              <div>
+              <div class="info">
                 <h2 class="title-project">Видання Limited Edition</h2>
                 <p class="kind-project">Дизайн</p>
               </div>
@@ -194,7 +196,7 @@
                 width="370"
                 height="294"
               />
-              <div>
+              <div class="info">
                 <h2 class="title-project">Проєкт LAB</h2>
                 <p class="kind-project">Маркетинг</p>
               </div>
@@ -209,7 +211,7 @@
                 width="370"
                 height="294"
               />
-              <div>
+              <div class="info">
                 <h2 class="title-project">Growing Business</h2>
                 <p class="kind-project">Додаток</p>
               </div>
@@ -217,12 +219,13 @@
             </a>
           </li>
         </ul>
+        </div>
       </section>
     </main>
 
     <!--підвал-->
     <footer class="footer-style">
-      <div class="container footer-design">
+      <div class="container">
         <a href="/" class="footer link">
           <span class="logo" lang="en">Web</span>Studio</a
         >
