--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
 
     <main>
       <!--Герой-->
-      <section class="hero-head">
-        <div class="head-content">
-        <h1 class="title-studio">Ефективні рішення для вашого бізнесу</h1></div>
-        <button class="btn" type="button">Замовити послугу</button>
-      
+      <section class="section hero-head">
+        <div class="container">
+          <h1 class="title-studio">Ефективні рішення для вашого бізнесу</h1>
+          <button class="btn" type="button">Замовити послугу</button>
+        </div>
       </section>
 
       <!--особливості-->
-      <section class="feature">
-        <div  class="container">
+      <section class="section feature">
+        <div class="container">
           <h2 hidden class="visually-hidden">Особливості</h2>
           <ul class="feature-list">
             <li class="list">
@@ -105,40 +105,43 @@
       </section>
 
       <!--чим ми займаємося-->
-      <section class="description">
+      <section class="section description">
         <div class="container">
-        <h2 class="title-desc">Чим ми займаємося</h2>
-        <ul class="desc">
-          <li class="list">
-            <img class="work"
-              src="./images/img1.jpg"
-              alt="десктопні додатки"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="list">
-            <img class="work"
-              src="./images/img2.jpg"
-              alt="мобільні додатки"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li class="list">
-            <img class="work"
-              src="./images/img3.jpg"
-              alt="дизайнерські рішення"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
-      </div>
+          <h2 class="title-desc">Чим ми займаємося</h2>
+          <ul class="desc">
+            <li class="list">
+              <img
+                class="work"
+                src="./images/img1.jpg"
+                alt="десктопні додатки"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="list">
+              <img
+                class="work"
+                src="./images/img2.jpg"
+                alt="мобільні додатки"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li class="list">
+              <img
+                class="work"
+                src="./images/img3.jpg"
+                alt="дизайнерські рішення"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--наша команда-->
-      <section class="team">
+      <section class="section team">
         <div class="container">
           <h2 class="title-desc">Наша команда</h2>
           <ul class="proper-team">
@@ -151,8 +154,9 @@
                 height="260"
               />
               <div class="team-content">
-              <h3 class="team-person">Ігор Дем'яненко</h3>
-              <p class="text-color proff" lang="en">Product Designer</p></div>
+                <h3 class="team-person">Ігор Дем'яненко</h3>
+                <p class="text-color proff" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="list">
               <img
@@ -163,8 +167,9 @@
                 height="260"
               />
               <div class="team-content">
-              <h3 class="team-person">Ольга Рєпіна</h3>
-              <p class="text-color proff" lang="en">Frontend Developer</p></div>
+                <h3 class="team-person">Ольга Рєпіна</h3>
+                <p class="text-color proff" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="list">
               <img
@@ -175,8 +180,9 @@
                 height="260"
               />
               <div class="team-content">
-              <h3 class="team-person">Микола Тарасов</h3>
-              <p class="text-color proff" lang="en">Marketing</p></div>
+                <h3 class="team-person">Микола Тарасов</h3>
+                <p class="text-color proff" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="list">
               <img
@@ -187,8 +193,9 @@
                 height="260"
               />
               <div class="team-content">
-              <h3 class="team-person">Михайло Єрмаков</h3>
-              <p class="text-color proff" lang="en">UI Designer</p></div>
+                <h3 class="team-person">Михайло Єрмаков</h3>
+                <p class="text-color proff" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -204,17 +211,19 @@
         <address>
           <ul class="address-design">
             <li class="list">
-              <a href="" class="link address contact"
+              <a href="" class="link address contact item"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
             <li class="list">
-              <a href="mailto:info@devstudio.com" class="link address meil-tel"
+              <a
+                href="mailto:info@devstudio.com"
+                class="link address meil-tel item"
                 >info@devstudio.com</a
               >
             </li>
             <li class="list">
-              <a href="tel:+380961111111" class="link address meil-tel"
+              <a href="tel:+380961111111" class="link address meil-tel item"
                 >+38 096 111 11 11</a
               >
             </li>
