--- a/portfolio.html
+++ b/portfolio.html
@@ -27,13 +27,10 @@
           >
           <ul class="site-nav">
             <li class="list">
-              <a href="" class="link link-color item current">Студія</a>
+              <a href="./index.html" class="link link-color item">Студія</a>
             </li>
             <li class="list">
-              <a
-                href="./portfolio.html"
-                target="_self"
-                class="link link-color item"
+              <a href="" target="_self" class="link link-color item current"
                 >Портфоліо</a
               >
             </li>
@@ -61,164 +58,157 @@
 
     <main>
       <!--Герой-->
-      <section class="portfolio">
+      <section class="section portfolio">
         <div class="container">
-        <h1 hidden class="visually-hidden">Портфоліо</h1>
-        <ul class="filter">
-          <li class="list">
-            <button class="filter-button active" type="button">Усі</button>
-          </li>
-          <li class="list">
-            <button class="filter-button" type="button">Веб-сайти</button>
-          </li>
-          <li class="list">
-            <button class="filter-button" type="button">Додатки</button>
-          </li>
-          <li class="list">
-            <button class="filter-button" type="button">Дизайн</button>
-          </li>
-          <li class="list">
-            <button class="filter-button" type="button">Маркетинг</button>
-          </li>
-        </ul>
-      
-        <ul class="flex-card">
-          <li class="element-card list">
-            <a href="" class="link">
-              <img
-                src="./images/works/one.jpg"
-                alt="website-techno"
-                width="370"
-                height="294"
-              />
-              <div class="info">
-                <h2 class="title-project">Технокряк</h2>
-                <p class="kind-project">Веб-сайт</p>
-              </div>
-              <p></p>
-            </a>
-          </li>
-          <li class="element-card list">
-            <a href="" class="link">
-              <img
-                src="./images/works/two.jpg"
-                alt="poster-design"
-                width="370"
-                height="294"
-              />
-              <div class="info">
-                <h2 class="title-project">Постер New Orlean vs Golden Star</h2>
-                <p class="kind-project">Дизайн</p>
-              </div>
-              <p></p>
-            </a>
-          </li>
-          <li class="element-card list">
-            <a href="" class="link">
-              <img
-                src="./images/works/three.jpg"
-                alt="seafood-application"
-                width="370"
-                height="294"
-              />
-              <div class="info">
-                <h2 class="title-project">Ресторан Seafood</h2>
-                <p class="kind-project">Додаток</p>
-              </div>
-              <p></p>
-            </a>
-          </li>
-          <li class="element-card list">
-            <a href="" class="link">
-              <img
-                src="./images/works/four.jpg"
-                alt="project-prime"
-                width="370"
-                height="294"
-              />
-              <div class="info">
-                <h2 class="title-project">Проєкт Prime</h2>
-                <p class="kind-project">Маркетинг</p>
-              </div>
-              <p></p>
-            </a>
-          </li>
-          <li class="element-card list">
-            <a href="" class="link">
-              <img
-                src="./images/works/five.jpg"
-                alt="project-boxes"
-                width="370"
-                height="294"
-              />
-              <div class="info">
-                <h2 class="title-project">Проєкт Boxes</h2>
-                <p class="kind-project">Додаток</p>
-              </div>
-              <p></p>
-            </a>
-          </li>
-          <li class="element-card list">
-            <a href="" class="link">
-              <img
-                src="./images/works/six.jpg"
-                alt="website-noborders"
-                width="370"
-                height="294"
-              />
-              <div class="info">
-                <h2 class="title-project">Inspiration has no Borders</h2>
-                <p class="kind-project">Веб-сайт</p>
-              </div>
-              <p></p>
-            </a>
-          </li>
-          <li class="element-card list">
-            <a href="" class="link">
-              <img
-                src="./images/works/seven.jpg"
-                alt="publication-design"
-                width="370"
-                height="294"
-              />
-              <div class="info">
-                <h2 class="title-project">Видання Limited Edition</h2>
-                <p class="kind-project">Дизайн</p>
-              </div>
-              <p></p>
-            </a>
-          </li>
-          <li class="element-card list">
-            <a href="" class="link">
-              <img
-                src="./images/works/eight.jpg"
-                alt="project-lab"
-                width="370"
-                height="294"
-              />
-              <div class="info">
-                <h2 class="title-project">Проєкт LAB</h2>
-                <p class="kind-project">Маркетинг</p>
-              </div>
-              <p></p>
-            </a>
-          </li>
-          <li class="element-card list">
-            <a href="" class="link">
-              <img
-                src="./images/works/nine.jpg"
-                alt="application-for-business"
-                width="370"
-                height="294"
-              />
-              <div class="info">
-                <h2 class="title-project">Growing Business</h2>
-                <p class="kind-project">Додаток</p>
-              </div>
-              <p></p>
-            </a>
-          </li>
-        </ul>
+          <h1 hidden class="visually-hidden">Портфоліо</h1>
+          <ul class="filter">
+            <li class="list">
+              <button class="filter-button active" type="button">Усі</button>
+            </li>
+            <li class="list">
+              <button class="filter-button" type="button">Веб-сайти</button>
+            </li>
+            <li class="list">
+              <button class="filter-button" type="button">Додатки</button>
+            </li>
+            <li class="list">
+              <button class="filter-button" type="button">Дизайн</button>
+            </li>
+            <li class="list">
+              <button class="filter-button" type="button">Маркетинг</button>
+            </li>
+          </ul>
+
+          <ul class="flex-card">
+            <li class="element-card list">
+              <a href="" class="link">
+                <img
+                  src="./images/works/one.jpg"
+                  alt="website-techno"
+                  width="370"
+                  height="294"
+                />
+                <div class="info">
+                  <h2 class="title-project">Технокряк</h2>
+                  <p class="kind-project">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="element-card list">
+              <a href="" class="link">
+                <img
+                  src="./images/works/two.jpg"
+                  alt="poster-design"
+                  width="370"
+                  height="294"
+                />
+                <div class="info">
+                  <h2 class="title-project">
+                    Постер New Orlean vs Golden Star
+                  </h2>
+                  <p class="kind-project">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="element-card list">
+              <a href="" class="link">
+                <img
+                  src="./images/works/three.jpg"
+                  alt="seafood-application"
+                  width="370"
+                  height="294"
+                />
+                <div class="info">
+                  <h2 class="title-project">Ресторан Seafood</h2>
+                  <p class="kind-project">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="element-card list">
+              <a href="" class="link">
+                <img
+                  src="./images/works/four.jpg"
+                  alt="project-prime"
+                  width="370"
+                  height="294"
+                />
+                <div class="info">
+                  <h2 class="title-project">Проєкт Prime</h2>
+                  <p class="kind-project">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="element-card list">
+              <a href="" class="link">
+                <img
+                  src="./images/works/five.jpg"
+                  alt="project-boxes"
+                  width="370"
+                  height="294"
+                />
+                <div class="info">
+                  <h2 class="title-project">Проєкт Boxes</h2>
+                  <p class="kind-project">Додаток</p>
+                </div>
+              </a>
+            </li>
+            <li class="element-card list">
+              <a href="" class="link">
+                <img
+                  src="./images/works/six.jpg"
+                  alt="website-noborders"
+                  width="370"
+                  height="294"
+                />
+                <div class="info">
+                  <h2 class="title-project">Inspiration has no Borders</h2>
+                  <p class="kind-project">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+            <li class="element-card list">
+              <a href="" class="link">
+                <img
+                  src="./images/works/seven.jpg"
+                  alt="publication-design"
+                  width="370"
+                  height="294"
+                />
+                <div class="info">
+                  <h2 class="title-project">Видання Limited Edition</h2>
+                  <p class="kind-project">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="element-card list">
+              <a href="" class="link">
+                <img
+                  src="./images/works/eight.jpg"
+                  alt="project-lab"
+                  width="370"
+                  height="294"
+                />
+                <div class="info">
+                  <h2 class="title-project">Проєкт LAB</h2>
+                  <p class="kind-project">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="element-card list">
+              <a href="" class="link">
+                <img
+                  src="./images/works/nine.jpg"
+                  alt="application-for-business"
+                  width="370"
+                  height="294"
+                />
+                <div class="info">
+                  <h2 class="title-project">Growing Business</h2>
+                  <p class="kind-project">Додаток</p>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
@@ -232,17 +222,19 @@
         <address>
           <ul class="address-design">
             <li class="list">
-              <a href="" class="link address contact"
+              <a href="" class="link address contact item"
                 >м. Київ, пр-т Лесі Українки, 26</a
               >
             </li>
             <li class="list">
-              <a href="mailto:info@devstudio.com" class="link address meil-tel"
+              <a
+                href="mailto:info@devstudio.com"
+                class="link address meil-tel item"
                 >info@devstudio.com</a
               >
             </li>
             <li class="list">
-              <a href="tel:+380961111111" class="link address meil-tel"
+              <a href="tel:+380961111111" class="link address meil-tel item"
                 >+38 096 111 11 11</a
               >
             </li>
